--- a/NASAApodLoader/app/src/main/res/values/strings.xml
+++ b/NASAApodLoader/app/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
     <string name="display_price">$%,.0f</string>
     <string name="submit">submit</string>
     <string name="input_image_number_1_400">Input image number (1-400)</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
